Bug 272185 - [view-transitions] Mispositioned snapshots on https://codepen.io/bramus/full/mdowgYX
Summary: [view-transitions] Mispositioned snapshots on https://codepen.io/bramus/full/...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Matt Woodrow
URL: https://codepen.io/bramus/full/mdowgYX
Keywords: InRadar
: 274402 (view as bug list)
Depends on:
Blocks: css-view-transitions
  Show dependency treegraph
 
Reported: 2024-04-04 14:45 PDT by Tim Nguyen (:ntim)
Modified: 2024-05-23 16:27 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Nguyen (:ntim) 2024-04-04 14:45:57 PDT
...
Comment 1 Radar WebKit Bug Importer 2024-04-04 14:46:07 PDT
<rdar://problem/125931829>
Comment 2 Tim Nguyen (:ntim) 2024-05-13 06:54:32 PDT
Pull request: https://github.com/WebKit/WebKit/pull/28473
Comment 3 Matt Woodrow 2024-05-20 15:41:56 PDT
Pull request: https://github.com/WebKit/WebKit/pull/28808
Comment 4 EWS 2024-05-23 02:08:08 PDT
Committed 279186@main (159906e6201b): <https://commits.webkit.org/279186@main>

Reviewed commits have been landed. Closing PR #28808 and removing active labels.
Comment 5 Matt Woodrow 2024-05-23 14:53:45 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/46461
Comment 6 Tim Nguyen (:ntim) 2024-05-23 16:27:27 PDT
*** Bug 274402 has been marked as a duplicate of this bug. ***